[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Gizmo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/RayCast.gd" type="Script" id=5]
[ext_resource path="res://NPC/NPC.gd" type="Script" id=6]
[ext_resource path="res://NPC/NPC.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Dialogue.gd" type="Script" id=8]
[ext_resource path="res://UI/UI.gd" type="Script" id=9]
[ext_resource path="res://Enemy/Ghost_container.gd" type="Script" id=10]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 100, 0.5, 100 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 50, 0.25, 50 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 4.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=5]
radius = 5.0

[node name="Game" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0 )

[node name="Ground" type="StaticBody" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 2 )
disabled = true

[node name="Terrain" parent="." instance=ExtResource( 3 )]
transform = Transform( 8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.956961, 0, 0.290218, 0, 1, 0, -0.290218, 0, -0.956961, -32.5187, -4.78979, 27.7761 )
collision_layer = 2
collision_mask = 3

[node name="Pivot" type="Position3D" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( -1, 1.51808e-08, -8.60946e-08, 0, 0.984808, 0.173648, 8.74228e-08, 0.173648, -0.984808, 0, 5, -8 )
current = true

[node name="RayCast" type="RayCast" parent="Player/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
enabled = true
cast_to = Vector3( 0, -1, 100 )
script = ExtResource( 5 )

[node name="Crosshair" type="Position3D" parent="Player/Pivot/RayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )

[node name="MeshInstance" type="MeshInstance" parent="Player/Pivot/RayCast/Crosshair"]
mesh = SubResource( 4 )

[node name="Gizmo" parent="." instance=ExtResource( 4 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 41.572, 67.2916, -18.0771 )
visible = false

[node name="Ghost_container" type="Spatial" parent="."]
script = ExtResource( 10 )

[node name="SpawnTimer" type="Timer" parent="Ghost_container"]
wait_time = 3.0

[node name="NPC" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, 0.939693, -27.4388, -4.47619, 9.95495 )
script = ExtResource( 6 )

[node name="Area" type="Area" parent="NPC"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="NPC/Area"]
shape = SubResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Score" type="Label" parent="UI"]
margin_left = 10.0
margin_right = 510.0
margin_bottom = 30.0
text = "Score: "
valign = 1

[node name="Time" type="Label" parent="UI"]
margin_left = 512.0
margin_right = 1014.0
margin_bottom = 30.0
text = "Timer: 00:00"
align = 2
valign = 1

[node name="Timer" type="Timer" parent="UI"]

[node name="Dialogue" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Text" type="RichTextLabel" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 10.0
bbcode_enabled = true
bbcode_text = "[center]Looking for the diamond? It's at the very highest point on the island.[/center]"
text = "Looking for the diamond? It's at the very highest point on the island."

[node name="DirectionalLight" type="DirectionalLight" parent="."]

[connection signal="timeout" from="Ghost_container/SpawnTimer" to="Ghost_container" method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="NPC/Area" to="NPC" method="_on_Area_body_entered"]
[connection signal="body_exited" from="NPC/Area" to="NPC" method="_on_Area_body_exited"]
[connection signal="timeout" from="UI/Timer" to="UI" method="_on_Timer_timeout"]
